# safe_sender

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: constants.hpp
include/controller/: application.hpp  controller.hpp
include/model/: data_container.hpp  encryptable.hpp  encryption.hpp  encryption_aes.hpp  encryption_key.hpp  encryption_sha_256.hpp  file.hpp  file_metadata.hpp  initialization_vector.hpp  model.hpp  raw_bytes.hpp  sendable.hpp  text_message.hpp
include/model/communication/: communicator.hpp  receiver.hpp  receiver_session.hpp  sendable.hpp  sender.hpp  sender_session.hpp  session.cpp  session.hpp
include/model/encryption/: encryptable.hpp  encryption.hpp  encryption_key.hpp  encryption_rsa.hpp  encryption_sha_256.hpp
include/view/: frame.hpp  info_frame.hpp  main_frame.hpp  text_input_frame.hpp  view.hpp  window.hpp  yes_no_frame.cpp  yes_no_frame.hpp
lib/: CMakeLists.txt
lib/boost/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/controller/: application.cpp
src/model/: data_container.cpp  encryptable.cpp  encryption.cpp  encryption_aes.cpp  encryption_key.cpp  encryption_rsa.cpp  encryption_sha_256.cpp  file.cpp  file_metadata.cpp  initialization_vector.cpp  raw_bytes.cpp  sendable.cpp  text_message.cpp
src/model/communication/: communicator.cpp  receiver.cpp  receiver_session.cpp  sendable.cpp  sender.cpp  sender_session.cpp  session.cpp
src/model/encryption/: encryptable.cpp  encryption.cpp  encryption_aes.cpp  encryption_key.cpp  encryption_rsa.cpp  encryption_sha_256.cpp
src/view/: frame.cpp  info_frame.cpp  main_frame.cpp  text_input_frame.cpp  window.cpp  yes_no_frame.cpp
tst/: CMakeLists.txt  test.cpp  test_communicator.cpp  test_encryption_aes.cpp  test_encryption_rsa.cpp  test_encryption_sha_256.cpp
